2003-11-25	Jennifer Averett <jennifer@OARcorp.com>

	PR 519/filesystem
	* include/rtems/libio_.h, src/eval.c, src/rmdir.c, src/unlink.c: Check
	write permissions in parent directory for file or directory delete

2003-11-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems/cdefs.h: Use _RTEMS_CDEFS_H guards.

2003-11-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems/cdefs.h: New.
	* Makefile.am: Completely reworked.

2003-11-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/config.h: Remove.
	* src/Makefile.am: AM_CPPFLAGS += -I$(top_builddir).

2003-10-22	Joel Sherrill <joel@OARcorp.com>

	PR 511/filesystem
	* src/malloc.c: Add deferred free and protect against C Program Heap
	operations while in a dispatch disable critical section or ISR.

2003-10-02	Phil Torre <ptorre@zetron.com>

	PR 504/rtems
	* src/newlibc.c: Fix memory allocation of libc extension so it is
	dispatch disabled safe See PR for detailed explanation.

2003-09-26	Till Strauman <strauman@slac.stanford.edu>

	PR 498/rtems
	* src/printk.c: RTEMS printk() does not support the %i format which is
	used by a lot of driver/BSP etc. code. The trivial patch allows %i/%I
	as an alias for %d/%D.

2003-09-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 489/rtems
	* src/newlibc.c: Reflect struct Thread_Control_struct.libc_reent 
	having changed from void * to struct _reent*.

2003-09-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/sync.c: Don't undef __STRICT_ANSI__.
	Use struct _reent (struct reent doesn't exist)

2003-09-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 486/rtems
	* src/newlib.c: Unconditionally include <stdio.h>

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* include/chain.h, include/clockdrv.h, include/console.h,
	include/iosupp.h, include/rtc.h, include/spurious.h,
	include/timerdrv.h, include/vmeintr.h, include/motorola/mc68230.h,
	include/rtems/libcsupport.h, include/rtems/libio.h,
	include/rtems/libio_.h, include/rtems/termiostypes.h,