@@ -1,3 +1,10 @@
+2003-11-26	Joel Sherrill <joel@OARcorp.com>
+
+	PR 523/filesystem
+	* src/malloc.c: Make malloc family safer for use from ISRs and
+	dispatching critical sections. If in a critical section while doing
+	a free(), then the free is deferred until the next malloc() attempt.
+
 2003-11-25	Jennifer Averett <jennifer@OARcorp.com>
 
 	PR 519/filesystem
